[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fifaks10Dev1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://WinScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.0
margin_top = -113.0
margin_right = 306.0
margin_bottom = -65.0
custom_fonts/font = SubResource( 1 )
text = "Winner:"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.0
margin_top = -59.0
margin_right = 306.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 1 )
text = "%Name%"
align = 1
valign = 1
autowrap = true

[node name="Leave" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = 104.0
margin_right = 161.0
margin_bottom = 141.0
text = "Leave"

[node name="DelServer" type="HTTPRequest" parent="ColorRect"]

[connection signal="pressed" from="ColorRect/Leave" to="." method="_on_Leave_pressed"]
